matnn/matnn-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-11-22T14:05:19Z"
  name: matnn-service
  namespace: default
  resourceVersion: "5582172"
  uid: 35d3b508-ea59-43b0-be6d-8780c27eb8b4
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.96.3.235
  clusterIPs:
  - 10.96.3.235
  externalIPs:
  - 10.123.1.4
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-1
    nodePort: 31566
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: port-2
    nodePort: 31713
    port: 8000
    protocol: TCP
    targetPort: 8000
  - name: port-3
    nodePort: 31715
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: matnn
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
