matnn/matnn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matnn-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "11m"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
      #nginx.ingress.kubernetes.io/rewrite-target: $request_uri
      #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - matnn-app.intamixx.uk
        - grafana.matnn-app.intamixx.uk
        - nginxtest.matnn-app.intamixx.uk
      secretName: letsencrypt-prod
  rules:
  - host: matnn-app.intamixx.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: matnn-service
            port:
              number: 9090
  - host: grafana.matnn-app.intamixx.uk  # Grafana hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
  - host: nginxtest.matnn-app.intamixx.uk  # Grafana hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-rwx-service
            port:
              number: 80
